--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,8 @@ facebook_username: maratonago
 github_username:  maratonago
 
 # Google Analytics tracking Code
-google_analytics: 'UA-116574142-1'
+google_analytics: 116574142
+#'UA-116574142-1'
 
 # Disqus comments shortname
 disqus:
